# G-LSMEI

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  requirements.txt
core/cuda/: correlation_cuda.cu  correlation_cuda.h  cuda_common.h  extract_cuda.cu  extract_cuda.h  matching_cuda.cu  matching_cuda.h
core/include/: Correlation.h  Extract.h  matching.h
core/src/: Correlation.cpp  Extract.cpp  matching.cpp  test.cpp
docs/: index.html
python/: CMakeLists.txt  MANIFEST.in  bindings.cpp  setup.py
python/app/: app.py  ui.py
python/package/: README_PyPI.md  __init__.py
